feat: implemented nats and worker
